data/derived/comb/progs/unify/prog3454.ml.out
Characters 96-98:
  | Average (a1,a2) -> (a1 + a2);;
                        ^^
Error: This expression has type expr but an expression was expected of type
         int
